--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 }
 .footer{
     text-align: center;
-    background-color:#ee6f57;
+    background-color:#070d59;
     color:#f6f5f5 ;
 }
     </style>
