--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <a class="nav-link" href="#">Blog</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item mr-2">
           <a class="nav-link" href="#">Contact Us</a>
