Added Contact page and blog

--- a/contact.html
+++ b/contact.html
@@ -130,11 +130,11 @@
         <li class="nav-item mr-2">
           <a class="nav-link" href="https://medium.com/@anoop1arora">Blog</a>
         </li>
-        <li class="nav-item active mr-2">
-          <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item active mr-2">
+          <a class="nav-link" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       
@@ -143,57 +143,10 @@
   </nav>
 </header>
 <div class="my-3 py-3 heading-text" style="background-color: #F5F5F5; text-align: center;">
-  <h1>About</h1>
+  <h1>Contact Us</h1>
 </div>
 <div class="container my-4">
-    <div class="row">
-      <div class="col-md-6">
-          <h3 class="heading-text dark-text"><b>Anoop Arora</b></h3>
-          <p class="heading-text">B Textiles, MBA, CAIIB, Dip. In Production Mgt.</p>
-          <h6 class="heading-text"><b>CHIEF MANAGER (Retd), From PUNJAB NATIONAL BANK</b></h6>
-          <ul class="py-3 heading-text">
-            <li>
-              Overall supervision of the Retail Loan Accounts and the Banking Schemes related to financial audits and management of accounts from the Head Office.
-            </li>
-            <li>
-              All India Position at Chief Manager Level and superannuated in Nov 2017
-            </li>
-            <li>
-              Served with PNB for the past 32 years dealing with financing relating to evaluations, approvals, sanctions, implementation, performance, and collections.
-            </li>
-            <li>
-              Liaison with Distt. level Government Agencies, Associations, Dealers for business promotion.
-            </li>
-            <li>
-              Responsible for multiple appraisals of projects at the Circle Office, Field General Manager Office & Head Office of PNB, successfully establishing hundreds of new businesses all over the country.
-            </li>
-            <li>
-              Responsible for credit appraisal of multiple projects and companies at various levels of Health Care Industry, Hospitality Industry, Institutional & Infrastructure Projects and Textiles.   
-            </li>
-            <li>
-              Possess skills in preparing Project Reports, CMA data, Risk/credit rating models and export finance.
-            </li>
-          </ul>
-      </div>
-      <div class="col-md-6 my-2" style="text-align: center;">
-        <image src='assets/img/pic.jpg'></image>
-        
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-md-4 my-2">
-        <h5 class="dark-text heading-text">Our Location:</h5>
-        <p>HNo. 828 Sector 9, <br>
-          Gurugram, Haryana,<br>
-          PIN: 122001,<br>
-          India </p>
-      </div>
-      <div class="col-md-8 my-2">
-        <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=HNO.%20828%20sector%209%20gurugram&amp;t=m&amp;z=14&amp;output=embed&amp;iwloc=near" aria-label="HNO. 828 sector 9 gurugram"></iframe>
-
-      </div>
-    </div>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSezYPrmGgI9y6px4yRSV_o0YfhetmahzR8M2bGFPp2oue43Mg/viewform?embedded=true" width="100%" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
 
