--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
           <a class="nav-link" href="services.html">Services Offered</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="https://medium.com/@anoop1arora">Blog</a>
         </li>
         <li class="nav-item mr-2">
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item mr-2">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
       </ul>
       
