--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>About | Shree Ganpathi Consultants</title>
+    <title>Contact | Shree Ganpati Consultants</title>
     <style>
     .lob-text{
         font-family: 'IBM Plex Sans', sans-serif;
@@ -178,7 +178,7 @@ function scrollFunction() {
     <div class="row">
       <div class="col-md-4 my-4">
         <image src='assets/img/100-100.png'></image>
-        <p class="d-block mb-3 white-text">Shree Ganpathi Consultants</p>
+        <p class="d-block mb-3 white-text">Shree Ganpati Consultants</p>
       </div>
       <div class="col-md-4 my-4">
         <h5><b>Our Location</b></h5>
