--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="assets/img/100-100.png">
     <title>About | Shree Ganpati Consultants</title>
     <style>
     .lob-text{
@@ -104,6 +107,14 @@
 .title-text{
   font-size: large;
 }
+.email-link{
+  color: #f6f5f5 ;
+  text-decoration: none;
+}
+.email-link:link{
+  color: #f6f5f5 ;
+  text-decoration: none;
+}
 
     </style>
   </head>
@@ -113,7 +124,7 @@
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark my-nav">
     <div class='container'>
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="/">
         <img src="assets/img/100-100.png" alt="logo" width='100px'>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -122,7 +133,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item mr-2">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item mr-2">
           <a class="nav-link" href="services.html">Services Offered </a>
@@ -176,7 +187,9 @@
           </ul>
       </div>
       <div class="col-md-6 my-2" style="text-align: center;">
-        <image src='assets/img/pic.jpg'></image>
+        <image class="mb-5" src='assets/img/pic.jpg'></image>
+        <br>
+        <button class='btn my-btn btn-lg' onclick="window.location.href='contact.html'">Contact Us</button>
         
       </div>
     </div>
@@ -202,7 +215,7 @@
   top: 0,
   left: 0,
   behavior: 'smooth'
-});" id="myBtn" title="Go to top"><i class="fa fa-long-arrow-up" aria-hidden="true"></i></button>
+});" id="myBtn" title="Go to top"><i class="fa fa-angle-up" aria-hidden="true"></i></button>
 <script>
   var mybutton = document.getElementById("myBtn");
 
@@ -241,7 +254,7 @@ function scrollFunction() {
         <h5><b>Contact</b></h5>
         <ul class="list-unstyled text-small">
           <li>Phone – +91 8130722256</li>
-          <li>Email – shreeganpaticonsutants@gmail.com</li>
+          <li>Email – <a class="email-link" href='mailto:shreeganpaticonsutants@gmail.com'>shreeganpaticonsutants@gmail.com</a></li>
           
         </ul>
       </div>
