contact page edit

--- a/services.html
+++ b/services.html
@@ -354,7 +354,7 @@ function scrollFunction() {
       <div class="col-md-4 my-4">
         <h5><b>Contact</b></h5>
         <ul class="list-unstyled text-small">
-          <li>Phone – +91 8130722256</li>
+          <li>Phone – <a class="email-link" href="whatsapp://send?phone=+918130722256">+91 8130722256</a></li>
           <li>Email – <a class="email-link" href='mailto:shreeganpaticonsutants@gmail.com'>shreeganpaticonsutants@gmail.com</a></li>
           
         </ul>
