--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 	<div class="section-3 py-5">
 		<div class="container my-5">
 			<div class="row">
-				<div class="col-md-6"></div>
+				<div class="col-md-6">
+					<image src='assets/img/bank.jpg' style="width: 100%;"></image>
+				</div>
 				<div class="col-md-6">
 					<div class="container-fluid py-4">
 						<p class="lob-text" style="color: gray;">for industries</p>
@@ -104,7 +106,9 @@
 						<p class="heading-text">The team members have got diversified experience in various segments of economy. They have got strong liaison with bank and government department for liaisoning, various government approvals, approval of projects, release of grants and subsidies.</p><button class='btn my-btn btn-lg' onclick="window.location.href='contact.html'">Contact Us</button>
 					</div>
 				</div>
-				<div class="col-md-6"></div>
+				<div class="col-md-6">
+					<image src='assets/img/agreement.jpg' style="width: 100%;"></image>
+				</div>
 			</div>
 		</div>
 	</div><button id="myBtn" onclick="window.scroll({ top: 0, left: 0, behavior: 'smooth' });" title="Go to top"><i aria-hidden="true" class="fa fa-angle-up"></i></button> 
