--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,9 @@
 							<a class="nav-link" href="/">Home</a>
 						</li>
 						<li class="nav-item mr-2">
+							<a class="nav-link" href="mudra-loan.html">Mudra Loan</a>
+						</li>
+						<li class="nav-item mr-2">
 							<a class="nav-link" href="services.html">Services Offered</a>
 						</li>
 						<li class="nav-item mr-2">
@@ -46,8 +49,8 @@
 	<div class="container my-4">
 		<div class="row">
 			<div class="col-md-7">
-				<div class="card p-5" style="border-radius: 10px;">
-					<iframe frameborder="0" height="1100" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSch3xB261A-i5SNktQLGWj32L0s_UAz-qqoOlWbg1mHAiQAJA/viewform?embedded=true" width="100%">Loading…</iframe>
+				<div class="card p-3" style="border-radius: 10px;">
+					<iframe frameborder="0" height="750" marginheight="0" marginwidth="0" src="https://docs.google.com/forms/d/e/1FAIpQLSch3xB261A-i5SNktQLGWj32L0s_UAz-qqoOlWbg1mHAiQAJA/viewform?embedded=true" width="100%">Loading…</iframe>
 				</div>
 			</div>
 			<div class="col-md-5 mt-2">
