--- a/services.html
+++ b/services.html
@@ -23,6 +23,9 @@
 						<li class="nav-item mr-2">
 							<a class="nav-link" href="/">Home</a>
 						</li>
+						<li class="nav-item mr-2">
+							<a class="nav-link" href="mudra-loan.html">Mudra Loan</a>
+						</li>
 						<li class="nav-item active mr-2">
 							<a class="nav-link" href="services.html">Services Offered <span class="sr-only">(current)</span></a>
 						</li>
